# lab_temperature-Backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _version.py  arduino_python_communication.py  arduino_python_communication_v2.py  arduino_python_communication_v3.py  constants.py  controller_test.py  flaskr.py  moduleInstallation.sh  pyproject.toml  receive_data.py  recieve_data.py  recieve_data_two_controller.py  requirements.txt  rubberHeaterPID.py  settings.txt  temperature_controller.py  test_suite.py  tests.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  pre-commit.yml  trivy.yml
Code_on_computer/: arduino_python_communication_v3.py  controller_test.py  flaskr.py  recieve_data.py  recieve_data_two_controller.py  settings.txt
Code_on_computer/templates/: form_test.html  layout.html
Installation/: enumerate_temp_brick.py  moduleInstallation.sh
templates/: form_test.html  sendSuccessfull.html
tests/: test_version.py
