[project]
name = "labtemperature_controller"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python3 PID demo for the Labnode PID controller"
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT", "PID", "PID controller",]
dependencies = [
    "typing-extensions; python_version <'3.11'",
    "aiostream ~= 0.6.1",
    "labnode-async ~= 0.16.2",
    "python-decouple ~= 3.8",
    "tinkerforge-async ~= 1.5.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend"
"Bug Tracker" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/issues"
"Download" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/releases"

[project.optional-dependencies]
dev = [
    "black", "build", "isort", "mypy", "pre-commit", "pylint",
]

test = [
    "mypy", "pylint",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
