[project]
name = "labtemperature_controller"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python3 PID demo for the Labnode PID controller"
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT", "PID", "PID controller",]
dependencies = [
    "typing-extensions; python_version <'3.11'",
    "aiostream ~= 0.7.1",
    "labnode-async ~= 0.16.4",
    "python-decouple ~= 3.8",
    "tinkerforge-async ~= 1.6.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend"
"Bug Tracker" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/issues"
"Download" = "https://github.com/TU-Darmstadt-APQ/lab_temperature-Backend/releases"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=82.0.1",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black~=26.3.1",
    "build~=1.4.3",
    "isort~=8.0.1",
    "pre_commit>=4.5.1,<4.7.0",
    "types-simplejson~=3.20.0.20260408",
    {include-group = "lint"},
]
lint = [
    "mypy~=1.20.1",
    "pylint~=4.0.5",
]
test = [
    "pytest~=9.0.3",
]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
